--- a/index.html
+++ b/index.html
@@ -3,120 +3,207 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dashboard</title>
+  <title>Registrasi Petani</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #38ada9, #079992);
-      min-height: 100vh;
+      background: linear-gradient(135deg, #17a2b8, #11998e);
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      padding: 40px 20px;
-      color: #fff;
+      min-height: 100vh;
+      padding: 20px;
+      color: #333;
     }
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 600;
-      margin: 20px 0 10px;
+    .welcome {
       text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .logo {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 10px;
+    }
+
+    .welcome h1 {
+      color: #004d40;
+      font-size: 1.8rem;
+      margin-bottom: 5px;
+      font-weight: 600;
+    }
+
+    .subtitle {
+      color: #eef2f3;
+      font-size: 1rem;
+      font-weight: 400;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
-    p.sub {
-      margin: 0 0 30px;
-      font-weight: 400;
-      color: #f5f5f5cc;
-      font-size: 1rem;
-      text-align: center;
-    }
-
-    .date {
-      margin-bottom: 30px;
-      font-size: 0.95rem;
-      color: #ffffffcc;
-    }
-
-    .svg-container {
-      max-width: 180px;
-      margin-bottom: 25px;
-    }
-
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-      justify-content: center;
-      max-width: 600px;
-      width: 100%;
-      margin-bottom: 30px;
-    }
-
-    a.button {
-      background-color: rgba(255, 255, 255, 0.15);
+    h2 {
       color: #fff;
-      text-decoration: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      font-weight: 500;
+      font-size: 2.2rem;
+      font-weight: 600;
+      margin-bottom: 25px;
+      text-align: center;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+    }
+
+    form {
+      background-color: #fff;
+      padding: 35px 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 400px;
+      animation: fadeIn 0.6s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .input-group {
+      position: relative;
+      margin-bottom: 20px;
+    }
+
+    .input-group i {
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #17a2b8;
       font-size: 1rem;
-      min-width: 160px;
-      text-align: center;
-      backdrop-filter: blur(5px);
-      transition: background-color 0.2s ease, transform 0.2s ease;
-      border: 1px solid rgba(255,255,255,0.2);
     }
 
-    a.button:hover {
-      background-color: rgba(255, 255, 255, 0.25);
-      transform: translateY(-2px);
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      padding: 12px 15px 12px 38px;
+      border-radius: 8px;
+      border: 2px solid #ccc;
+      font-size: 1rem;
+      transition: border-color 0.3s, box-shadow 0.3s;
     }
 
-    footer {
-      margin-top: auto;
-      font-size: 0.85rem;
-      color: #eeeeeeaa;
+    input:focus {
+      outline: none;
+      border-color: #17a2b8;
+      box-shadow: 0 0 6px #17a2b8aa;
+    }
+
+    .error {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: -15px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      width: 100%;
+      background-color: #17a2b8;
+      color: #fff;
+      font-weight: 600;
+      font-size: 1.1rem;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #138496;
+      box-shadow: 0 6px 14px rgba(23, 162, 184, 0.4);
+    }
+
+    p {
+      margin-top: 20px;
       text-align: center;
-      padding: 20px 0;
+      color: #fff;
+      font-weight: 500;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    }
+
+    a {
+      color: #f9ca24;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 480px) {
-      a.button {
-        min-width: 100%;
+      form {
+        padding: 25px 20px;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="svg-container">
-    <svg width="100%" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="32" cy="32" r="30" stroke="#fff" stroke-width="4" fill="none"/>
-      <path d="M20 40L32 24L44 40" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
+  <!-- Sambutan -->
+  <div class="welcome">
+    <img src="https://img.icons8.com/color/96/plant-under-sun--v1.png" alt="Logo Petani" class="logo">
+    <h1>Selamat Datang di Registrasi</h1>
+    <p class="subtitle">Silakan buat akun baru untuk bergabung</p>
   </div>
 
-  <h1>Selamat datang, {{ username }}</h1>
-  <p class="sub">Kelola data petani, komoditas, dan hasil panen dengan mudah.</p>
-  <div class="date">Hari ini: {{ tanggal }}</div>
+  <form method="POST" onsubmit="return validateForm()">
+    <div class="input-group">
+      <i class="bi bi-person"></i>
+      <input type="text" id="username" name="username" placeholder="Username" required />
+    </div>
 
-  <nav>
-    <a href="{{ url_for('form_petani') }}" class="button">Tambah Data Petani</a>
-    <a href="{{ url_for('riwayat_petani') }}" class="button">Riwayat Data Petani</a>
-    <a href="{{ url_for('isi_komoditas') }}" class="button">Isi Komoditas</a>
-    <a href="{{ url_for('riwayat_komoditas') }}" class="button">Riwayat Komoditas</a>
-    <a href="{{ url_for('isi_hasil_panen') }}" class="button">Isi Hasil Panen</a>
-    <a href="{{ url_for('riwayat_hasil_panen') }}" class="button">Riwayat Hasil Panen</a>
-    <a href="{{ url_for('logout') }}" class="button">Logout</a>
-  </nav>
+    <div class="input-group">
+      <i class="bi bi-lock"></i>
+      <input type="password" id="password" name="password" placeholder="Password" required />
+    </div>
 
-  <footer>
-    &copy; 2025 Aplikasi Petani. Dibuat untuk menuntaskan tugas GIS.
-  </footer>
+    <div class="input-group">
+      <i class="bi bi-lock-fill"></i>
+      <input type="password" id="confirm-password" name="confirm-password" placeholder="Konfirmasi Password" required />
+    </div>
 
+    <div class="error" id="error-message"></div>
+
+    <button type="submit">Daftar</button>
+  </form>
+
+  <p>Sudah punya akun? <a href="{{ url_for('login') }}">Login di sini</a></p>
+
+  <!-- Validasi JS -->
+  <script>
+    function validateForm() {
+      const pass = document.getElementById("password").value;
+      const confirm = document.getElementById("confirm-password").value;
+      const error = document.getElementById("error-message");
+
+      if (pass !== confirm) {
+        error.textContent = "Password dan konfirmasi tidak cocok!";
+        return false;
+      }
+
+      if (pass.length < 6) {
+        error.textContent = "Password minimal 6 karakter!";
+        return false;
+      }
+
+      error.textContent = "";
+      return true;
+    }
+  </script>
 </body>
 </html>
