--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Registrasi Petani</title>
+
+  <!-- Google Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PQF3BL5NG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4PQF3BL5NG');
+  </script>
+
+  <!-- CSS Styles -->
   <style>
     * {
       box-sizing: border-box;
@@ -161,6 +174,7 @@
     <p class="subtitle">Silakan buat akun baru untuk bergabung</p>
   </div>
 
+  <!-- Form Registrasi -->
   <form method="POST" onsubmit="return validateForm()">
     <div class="input-group">
       <i class="bi bi-person"></i>
@@ -184,7 +198,7 @@
 
   <p>Sudah punya akun? <a href="{{ url_for('login') }}">Login di sini</a></p>
 
-  <!-- Validasi JS -->
+  <!-- Validasi Form -->
   <script>
     function validateForm() {
       const pass = document.getElementById("password").value;
